--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,6 +2,11 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
+
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+
+#removem mensagens de erro em requisições
+server.error.include-stacktrace=never
+server.error.include-message=always
 
