add dev profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.profiles.active=test
-#spring.profiles.active=dev
+#spring.profiles.active=test
+spring.profiles.active=dev
 #spring.profiles.active=prod
+
+#removem mensagens de erro em requisições
+server.error.include-stacktrace=never
+server.error.include-message=always
 
